--- a/Models/SpeechLM/2024.11.01_Freeze-Omni.md
+++ b/Models/SpeechLM/2024.11.01_Freeze-Omni.md
@@ -36,6 +36,27 @@ Freeze-Omni mainly provides a possibility for researchers to conduct multimodal 
 
 ## 1.Introduction: 引言
 
+In recent years, the development of large language models has been extremely rapid. A series of large language models represented by the GPT series~\citep{floridi2020gpt,achiam2023gpt} of OpenAI has demonstrated extraordinary capabilities. As speech interaction is one of the most natural forms of human-computer interaction, combining speech input and output with an LLM can bring an extraordinary experience to users. The traditional method is to use a cascaded approach of ASR + LLM + TTS to achieve the interaction with LLM in speech modality. However, this approach often leads to a relatively high engineering complexity and a considerable interaction latency. Nevertheless, GPT-4o~\citep{NBS_2021} has changed this situation, it provides an end-to-end speech interaction mode which has significantly improved the user experience, triggering a research boom among researchers regarding multimodal LLMs for speech-to-speech interaction.
+
+In the field of general LLMs, many public models such as Llama 3.2~\citep{dubey2024llama}, Qwen2.5~\citep{qwen2.5}, Mixtral~\citep{jiang2024mixtral}, etc. have provided very good opportunities for researchers to develop downstream tasks on them. Therefore, in the research field of multimodal LLMs for speech-to-speech, works such as Mini-Omni2~\citep{xie2024mini2}, LLaMA-Omni~\citep{fang2024llama}, and Moshi~\citep{defossez2024moshi} have provided excellent references for researchers. These works adopt different strategies to align the speech modality with the LLM and design some methods to achieve a duplex dialogue mode, demonstrating excellent performance.
+
+In this research context, we found that in the process of aligning the LLM with the speech modality in existing public speech-text multimodal LLMs~\citep{chu2024qwen2,defossez2024moshi,fang2024llama,fu2024vita,zhang2023speechgptempoweringlargelanguage,xie2024mini}, the parameters of the LLM are more or less fine-tuned. However, in most cases, it is very difficult for researchers to easily collect spoken Q\&A data at the million-hour level (the corresponding text content can be comparable to the amount of data for training text-modal LLMs).  This inevitably brings about the forgetting problem to the LLM, resulting in a negative impact on its intelligence. In addition, only a few works have evaluated the accuracy of spoken question-answering tasks for speech-to-speech multimodal LLMs, and show an obvious gap in performance between spoken question-answering and text-modality question-answering. Therefore, in this paper, we propose a speech-to-speech dialogue LLM called Freeze-Omni, achieving speech modality alignment while the LLM is frozen throughout the training process, and obtaining low latency speech dialogue capabilities while keeping the intelligence of the backbone LLM. Freeze-Omni is mainly implemented in the following steps:
+
+\textbf{Modeling of speech input}
+We first use a large amount of ASR data to align the speech encoder and the LLM, enabling the LLM to understand the semantic information from the speech. Then, with the LLM frozen, a training strategy of prompt embedding is used to let the model have the ability to possess speech input to text output, training on only a small amount of Q\&A data.
+
+\textbf{Modeling of speech output}
+Second, we use a mount of text-speech paired data to train the AR-based speech decoder which can generate speech tokens from text and a single-codebook based codec model is used to decode the speech token into waveform. Then, we design a prefix kv-cache fine-tune strategy, using the hidden state vector output by the LLM to transfer the speech decoder into the output text space of LLM, achieving the ability of text input to speech output while keeping the LLM frozen.
+
+\textbf{Design for duplex dialogue}
+Finally, we simultaneously connect the speech encoder and speech decoder from the above parts to the backbone LLM. Then, a task of chunk-wise state prediction is used to enable the LLM to interrupt or reject the user's input, achieving the duplex speech-to-speech dialogue ability.
+
+In conclusion, the main contributions of the proposed Freeze-Omni are as follows:
+
+- The parameters of the LLM are completely frozen throughout the training process, ensuring that the intelligence of the LLM will be kept. At the same time, the ability of low latency speech-to-speech dialogue is still obtained.
+- The data scale relied on during the training process is small and consumes fewer computing resources. It requires text-speech paired data (such as ASR and TTS training data) and only a small amount of Q\&A data in text modality.
+- Freeze-Omni can support any (multimodal) LLM that has a text modality and retains the abilities of the LLM such as prompt following and role-playing. Moreover, if it is necessary to change the style of the LLM's response, it is only necessary to fine-tune the LLM with text data in the corresponding style.
+
 ## 2.Related Works: 相关工作
 
 ## 3.Methodology: 方法
