--- a/Models/Speech_Neural_Codec/2024.09.18_CoFi-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.09.18_CoFi-Codec.md
@@ -1,3 +1,3 @@
 # CoFi-Codec
 
-Codec in [CoFi-Speech](../Speech_LLM/2024.09.18_CoFi-Speech.md)
+Codec in [CoFi-Speech](../SpeechLM/2024.09.18_CoFi-Speech.md)
