--- a/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
@@ -58,7 +58,7 @@ Recent advancements in audio generation have been significantly propelled by the
 The existing research on audio LLM has primarily focused on enhancing the architecture and scale of audio language models, as well as leveraging larger datasets, and generally, acoustic codecs, such as [EnCodec](2022.10.24_EnCodec.md), are used for audio tokenization.
 However, these codecs were originally designed for audio compression, which may lead to suboptimal performance in the context of audio LLM.
 Our research aims to address the shortcomings of current audio LLM codecs, particularly their challenges in maintaining semantic integrity in generated audio.
-For instance, existing methods like [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), which condition acoustic token generation on text transcriptions, often suffer from content inaccuracies and elevated word error rates (WER) due to semantic misinterpretations of acoustic tokens, resulting in word skipping and errors.
+For instance, existing methods like [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), which condition acoustic token generation on text transcriptions, often suffer from content inaccuracies and elevated word error rates (WER) due to semantic misinterpretations of acoustic tokens, resulting in word skipping and errors.
 To overcome these issues, we propose a straightforward yet effective approach called ***X-Codec***.
 ***X-Codec*** incorporates semantic features from a pre-trained semantic encoder before the Residual Vector Quantization (RVQ) stage and introduces a semantic reconstruction loss after RVQ.
 By enhancing the semantic ability of the codec, ***X-Codec*** significantly reduces WER in speech synthesis tasks and extends these benefits to non-speech applications, including music and sound generation.
@@ -70,17 +70,17 @@ Code: https://github.com/zhenye234/xcodec
 ## 1.Introduction: 引言
 
 In recent years, Large Language Models (LLMs) such as GPT \cite{brown2020language} have demonstrated remarkable capabilities in modeling complex, high-dimensional data across various domains, including text and image generation \cite{zhao2023survey,liu2024visual}.
-Inspired by these successes, there has been significant interest ([MusicLM](../Speech_LLM/2023.01.26_MusicLM.md); [AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md)) in exploring the application of LLMs to audio generation.
+Inspired by these successes, there has been significant interest ([MusicLM](../SpeechLM/2023.01.26_MusicLM.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [UniAudio](../SpeechLM/2023.10.01_UniAudio.md)) in exploring the application of LLMs to audio generation.
 
 Audio codecs ([SoundStream](2021.07.07_SoundStream.md)) have emerged as a critical technique for audio LLMs, bridging the gap between continuous audio waveforms and token-based language models.
 By discretizing high-rate audio signals into a finite set of tokens, these codecs enable the application of LLM architectures to audio data, leveraging the successes of textual LLMs.
 
 However, prior research on audio codecs has primarily focused on achieving lower compression rates and higher reconstruction quality ([DAC](2023.06.11_Descript-Audio-Codec.md); [EnCodec](2022.10.24_EnCodec.md); [HiFi-Codec](2023.05.04_HiFi-Codec.md)).
 Meanwhile, many efforts in audio generation have concentrated on enhancing model architecture, scaling, or leveraging larger datasets.
-For instance, [AudioLM](../Speech_LLM/2022.09.07_AudioLM.md) adopts a two-stage pipeline that models the acoustic token in an autoregressive way conditioned on the semantic token.
-[VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), the first TTS framework to leverage large, diverse, and multi-speaker speech data, demonstrates strong in-context learning capabilities similar to GPT-3, treating TTS as a language modeling task on audio codecs.
-[MusicGen](../Speech_LLM/2023.06.08_MusicGen.md) generates music using a single-stage transformer LM alongside efficient token interleaving patterns.
-Similarly, [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md) scaled up to 165K hours of audio and 1B parameters, utilizing LLM techniques to generate tokens for various types of audio, including speech, sounds, music, and singing, given different input conditions.
+For instance, [AudioLM](../SpeechLM/2022.09.07_AudioLM.md) adopts a two-stage pipeline that models the acoustic token in an autoregressive way conditioned on the semantic token.
+[VALL-E](../SpeechLM/2023.01.05_VALL-E.md), the first TTS framework to leverage large, diverse, and multi-speaker speech data, demonstrates strong in-context learning capabilities similar to GPT-3, treating TTS as a language modeling task on audio codecs.
+[MusicGen](../SpeechLM/2023.06.08_MusicGen.md) generates music using a single-stage transformer LM alongside efficient token interleaving patterns.
+Similarly, [UniAudio](../SpeechLM/2023.10.01_UniAudio.md) scaled up to 165K hours of audio and 1B parameters, utilizing LLM techniques to generate tokens for various types of audio, including speech, sounds, music, and singing, given different input conditions.
 
 While these works have shown success in developing audio language models, they all rely on the acoustic codecs such as [EnCodec](2022.10.24_EnCodec.md) or [SoundStream](2021.07.07_SoundStream.md) for audio tokenization and de-tokenization.
 However, these acoustic codecs were originally designed for audio compression rather than for audio language models.
@@ -90,10 +90,10 @@ To design a better audio codec for Audio LLMs, we drew inspiration from the init
 These models focus on understanding and generating natural language, which is inherently rich in semantics.
 Motivated by this, we assume that a better audio tokenizer should encapsulate rich semantic information to facilitate an easy understanding of audio content, thus reducing the language model's burden in interpreting tokens.
 However, most audio codecs focus on acoustic reconstruction which ignores the semantic information.
-As a result, LLM essentially tries to predict the local fluctuations of the audio signal, which is difficult, and methods like [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), which condition acoustic token generation on text transcriptions, frequently result in content inaccuracies causing elevated word error rates (WER), stemming from the semantic misinterpretations of acoustic tokens, leading to word skipping and errors.
+As a result, LLM essentially tries to predict the local fluctuations of the audio signal, which is difficult, and methods like [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), which condition acoustic token generation on text transcriptions, frequently result in content inaccuracies causing elevated word error rates (WER), stemming from the semantic misinterpretations of acoustic tokens, leading to word skipping and errors.
 
 To address this issue, approaches like [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) have attempted to disentangle speech into separate tokens for content and timbre and perform distillation-based semantic and acoustic integration.
-However, this method may not integrate smoothly with all audio LLMs, especially those requiring uniform token treatment across different layers, such as utilizing flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)).
+However, this method may not integrate smoothly with all audio LLMs, especially those requiring uniform token treatment across different layers, such as utilizing flattened codec tokens ([UniAudio](../SpeechLM/2023.10.01_UniAudio.md); [MusicGen](../SpeechLM/2023.06.08_MusicGen.md)).
 
 In this paper, We propose a straightforward yet effective method termed `X-Codec`, which integrates both semantic and acoustic features into a unified tokenization framework.
 The ***X-Codec*** architecture employs a distinctive `X-shaped` structure, characterized by two inputs and two outputs, unifying semantic and acoustic information within a single Residual Vector Quantizer (RVQ) structure.
@@ -101,23 +101,23 @@ This design enables simultaneous embedding learning of semantic richness and aco
 
 We have conducted comprehensive evaluations of ***X-Codec*** across various applications, including text-to-speech, music continuation, and text-to-sound synthesis.
 The results consistently demonstrate the effectiveness of the proposed method.
-Furthermore, our comparative evaluation on [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) based TTS demonstrates that ***X-Codec*** outperforms existing disentanglement techniques, thereby highlighting its efficacy and versatility in advancing audio LLM technologies.
+Furthermore, our comparative evaluation on [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) based TTS demonstrates that ***X-Codec*** outperforms existing disentanglement techniques, thereby highlighting its efficacy and versatility in advancing audio LLM technologies.
 
 ## 2.Related Works: 相关工作
 
 ### Audio Language Model
 
-The success of Large Language Models (LLMs) has sparked a significant trend in leveraging language foundation models for audio generation tasks ([AudioPaLM](../Speech_LLM/2023.06.22_AudioPaLM.md); zhang2024speechlm,wu2023decoder,wu2023speechgen,[UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md)).
+The success of Large Language Models (LLMs) has sparked a significant trend in leveraging language foundation models for audio generation tasks ([AudioPaLM](../SpeechLM/2023.06.22_AudioPaLM.md); zhang2024speechlm,wu2023decoder,wu2023speechgen,[UniAudio](../SpeechLM/2023.10.01_UniAudio.md); [LauraGPT](../SpeechLM/2023.10.07_LauraGPT.md)).
 Audio, much like language, consists of variable-length sequences, making it well-suited for modeling with language foundation models.
-One pioneering method, [AudioLM](../Speech_LLM/2022.09.07_AudioLM.md), employs a multi-stage strategy to harness the predictive capabilities of foundation models for generating tokens unconditionally.
+One pioneering method, [AudioLM](../SpeechLM/2022.09.07_AudioLM.md) employs a multi-stage strategy to harness the predictive capabilities of foundation models for generating tokens unconditionally.
 This approach involves predicting semantic tokens from various conditions (e.g., phonemes, text descriptions, MIDI) in the initial stage, followed by transforming them into acoustic tokens through coarse-to-fine modeling, ultimately generating the waveform.
-Representative systems such as [SPEAR-TTS](../Speech_LLM/2023.02.07_SPEAR-TTS.md) for speech synthesis and [MusicLM](../Speech_LLM/2023.01.26_MusicLM.md) for music generation have also been proposed.
+Representative systems such as [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md) for speech synthesis and [MusicLM](../SpeechLM/2023.01.26_MusicLM.md) for music generation have also been proposed.
 However, the two-stage process can lead to complexity in training and suboptimal performance due to the separate development of semantic and acoustic tokens, leading to error accumulation.
 
 Conversely, recent advancements have shown that methods employing a single-stage language model outperform two-stage approaches.
-For example, [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) utilizes an autoregressive (AR) model to predict the first token and a non-autoregressive (NAR) model to estimate the residual tokens, demonstrating superior performance compared to AudioLM.
-Similarly, [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md) employs a single-stage transformer language model and incorporates a delay pattern strategy for efficient token interleaving, achieving better results than MusicLM.
-Other notable works include [CLAM-TTS](../Speech_LLM/2024.04.03_CLaM-TTS.md), [VoiceCraft](../Speech_LLM/2024.03.25_VoiceCraft.md), and [UniAudio](../Speech_LLM/2023.10.01_UniAudio.md).
+For example, [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) utilizes an autoregressive (AR) model to predict the first token and a non-autoregressive (NAR) model to estimate the residual tokens, demonstrating superior performance compared to AudioLM.
+Similarly, [MusicGen](../SpeechLM/2023.06.08_MusicGen.md) employs a single-stage transformer language model and incorporates a delay pattern strategy for efficient token interleaving, achieving better results than MusicLM.
+Other notable works include [CLAM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md), [VoiceCraft](../SpeechLM/2024.03.25_VoiceCraft.md), and [UniAudio](../SpeechLM/2023.10.01_UniAudio.md).
 
 Despite recent advancements, directly modeling the intricate low-level acoustic fluctuations with an LLM poses challenges.
 LLMs are primarily designed for processing natural language, which is inherently rich in semantics.
@@ -136,8 +136,8 @@ Similarly, [EnCodec](2022.10.24_EnCodec.md) enhances compression through a multi
 These codecs primarily focus on acoustic reconstruction and higher compression rates, often overlooking their potential as tokenizers for audio LLMs.
 Some attempts have been made to develop more suitable tokenizers for audio LLMs.
 For example, [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) utilizes [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md) to separate speech into distinct VQ components for content and timbre/acoustic details.
-This separation improves the modeling of content in the AR stage of [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), while the NAR stage enriches the acoustic details.
-However, a distillation framework is exploited, this makes [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) may not be compatible with all LLM architectures, especially those that require uniform treatment of tokens, such as methods using flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)).
+This separation improves the modeling of content in the AR stage of [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), while the NAR stage enriches the acoustic details.
+However, a distillation framework is exploited, this makes [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) may not be compatible with all LLM architectures, especially those that require uniform treatment of tokens, such as methods using flattened codec tokens ([UniAudio](../SpeechLM/2023.10.01_UniAudio.md); [MusicGen](../SpeechLM/2023.06.08_MusicGen.md)).
 Another attempt is presented by [SemantiCodec](2024.04.30_SemantiCodec.md), which employs a pre-trained [AudioMAE](../_tmp/2022.07.13_AudioMAE.md) to generate distinct semantic and acoustic tokens from mel-spectrograms.
 However, this method inherits the issues of [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) and introduces additional complexity in token modeling.
 Moreover, since the audioMAE is performed on 2D time-frequency mel-spectrograms, LLMs must effectively handle dual scales (time and frequency), which may require significant modifications to existing LLM structures.
@@ -163,8 +163,8 @@ The training process is supervised using various losses, including mel loss, STF
 
 ### Analysing Semantic Shortcoming
 
-In this section, we investigate the impact of acoustic codecs on the performance of audio LLMs, focusing specifically on [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), a pioneering model that leverages language model principles for text-to-speech.
-Our analysis reveals that training [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) using [EnCodec](2022.10.24_EnCodec.md) results in high word error rates (WER) and frequent inaccuracies in content generation.
+In this section, we investigate the impact of acoustic codecs on the performance of audio LLMs, focusing specifically on [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), a pioneering model that leverages language model principles for text-to-speech.
+Our analysis reveals that training [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) using [EnCodec](2022.10.24_EnCodec.md) results in high word error rates (WER) and frequent inaccuracies in content generation.
 For example, when the input text `he passed through Henley Saint Albans and came so near to London as Harrow on the Hill` is synthesized, it is erroneously produced as `he passed through henley saint albeans and camsel knew to lunglan as herold the lor`.
 This misinterpretation, which is beyond simply improving the audio quality, suggests a fundamental limitation in [EnCodec](2022.10.24_EnCodec.md)'s ability to differentiate phonemes, possibly due to its inadequate semantic processing capabilities.
 
@@ -206,10 +206,10 @@ This controlled experimental design enables us to isolate and evaluate the speci
 
 ### Text-to-Speech 文本转语音部分
 
-In this subsection, we critically evaluate the performance of various audio codecs in training the [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) model for zero-shot Text-to-Speech (TTS) tasks.
+In this subsection, we critically evaluate the performance of various audio codecs in training the [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) model for zero-shot Text-to-Speech (TTS) tasks.
 Our investigation is guided by two primary objectives:
 - To determine whether the ***X-Codec*** can enhance the performance of audio LLMs in TTS applications.
-- To evaluate the comparative advantages of ***X-Codec*** over the disentanglement strategy employed by [SpeechTokenizer](2023.08.31_SpeechTokenizer.md), specifically within the context of the [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) model.
+- To evaluate the comparative advantages of ***X-Codec*** over the disentanglement strategy employed by [SpeechTokenizer](2023.08.31_SpeechTokenizer.md), specifically within the context of the [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) model.
 
 #### Baselines
 
@@ -228,23 +228,23 @@ To ensure comparability, we also adopt the strategy of employing the average rep
 
 #### Training Details of VALL-E
 
-For reproduction of the [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), we utilize the resources specified in the provided repository ([Github](https://github.com/lifeiteng/vall-e)).
+For reproduction of the [VALL-E](../SpeechLM/2023.01.05_VALL-E.md), we utilize the resources specified in the provided repository ([Github](https://github.com/lifeiteng/vall-e)).
 The training data is the [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md), retaining the default settings as specified in the repository, except for the learning rate during the AR stage, which is adjusted to 0.01 to enhance model stability.
 The training process span 100 epochs for the AR stage and 200 epochs for the non-autoregressive (NAR) stage, same for all audio codecs for a fair comparison.
 
 #### Evaluation Metrics
 
 To assess the performances of zero-shot TTS systems, we employ the following metrics:
-- [WER (Word Error Rate)](../../Evaluations/WER.md): We utilize an Automatic Speech Recognition (ASR) model to transcribe the generated audio ([VALL-E](../Speech_LLM/2023.01.05_VALL-E.md)).
+- [WER (Word Error Rate)](../../Evaluations/WER.md): We utilize an Automatic Speech Recognition (ASR) model to transcribe the generated audio ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md)).
 The discrepancies between these transcriptions and the original texts are quantified using WER, providing a critical measure of audio intelligibility.
 - [Sim-O (Similarity Objective)](../../Evaluations/Sim-O.md): This metric assesses the objective similarity between synthesized speech and the original reference speech.
-Sim-O uses feature embeddings extracted from a pre-trained speaker verification model to measure this similarity ([HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md); [CLaM-TTS](../Speech_LLM/2024.04.03_CLaM-TTS.md)) ([Github](https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification)), reflecting the codec's ability to preserve speaker characteristics.
-- [UTMOS](../../Evaluations/UTMOS.md): We evaluate the audio quality using UTMOS, a Speech MOS (Mean Opinion Score) predictor ([Github](https://github.com/tarepan/SpeechMOS)) that automatically measures the naturalness of speech.
+Sim-O uses feature embeddings extracted from a pre-trained speaker verification model to measure this similarity ([HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md); [CLaM-TTS](../SpeechLM/2024.04.03_CLaM-TTS.md)) ([Github](https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification)), reflecting the codec's ability to preserve speaker characteristics.
+- [UTMOS](../../Evaluations/2022.04.05_UTMOS.md): We evaluate the audio quality using UTMOS, a Speech MOS (Mean Opinion Score) predictor ([Github](https://github.com/tarepan/SpeechMOS)) that automatically measures the naturalness of speech.
 This metric provides insights into the overall auditory quality of the synthesized speech.
 
 #### Zero-shot TTS Results
 
-We use [librispeech-test-clean](../../Datasets/2015.04.19_LibriSpeech.md) for zero-shot TTS evaluation following [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md)-continual-setting.
+We use [librispeech-test-clean](../../Datasets/2015.04.19_LibriSpeech.md) for zero-shot TTS evaluation following [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)-continual-setting.
 The results in Table \ref{valle_exp} demonstrate the following key findings:
 
 - When comparing both ***X-Codec*** and [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) against the baseline and other acoustic codecs like [DAC](2023.06.11_Descript-Audio-Codec.md) and [EnCodec](2022.10.24_EnCodec.md), we observe improvements in WER.
