--- a/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.20_MuCodec.md
@@ -43,20 +43,20 @@ Code and Demo: https://xuyaoxun.github.io/MuCodec_demo/.
 ## 1.Introduction: 引言
 
 Music codecs\cite{codec1,codec2,codec3} are a crucial component in the field of audio codec\cite{audiocodec1,audiocodec2,audiocodec3} research.
-The significance of ultra low-bitrate compression lies in its potential applications, such as music transmission, where the bitrate of MP3\cite{casas2021mp3} is considerably high, and music generation\cite{[MusicGen [8]](../Speech_LLM/2023.06.08_MusicGen.md); gao2024endtoendapproachchordconditionedsong,lei2024songcreatorlyricsbaseduniversalsong}, where short sequences are highly effective for language model construction.
+The significance of ultra low-bitrate compression lies in its potential applications, such as music transmission, where the bitrate of MP3\cite{casas2021mp3} is considerably high, and music generation\cite{[MusicGen [8]](../SpeechLM/2023.06.08_MusicGen.md); gao2024endtoendapproachchordconditionedsong,lei2024songcreatorlyricsbaseduniversalsong}, where short sequences are highly effective for language model construction.
 Furthermore, considering the diversity of background, sound events, and vocals in music, achieving high-fidelity reconstruction at ultra low bitrates would signify a substantial advancement in the field of universal audio generation.
 
-Recent music compression techniques based on neural codecs ([SpeechX [11]](../Speech_LLM/2023.08.14_SpeechX.md); [AudioDec [12]](2023.05.26_AudioDec.md); [VALL-E [13]](../SpeechLM/2023.01.05_VALL-E.md); [FunCodec [14]](2023.09.14_FunCodec.md); [APCodec [15]](2024.02.16_APCodec.md)) attempt to compress music directly into discrete tokens.
+Recent music compression techniques based on neural codecs ([SpeechX [11]](../SpeechLM/2023.08.14_SpeechX.md); [AudioDec [12]](2023.05.26_AudioDec.md); [VALL-E [13]](../SpeechLM/2023.01.05_VALL-E.md); [FunCodec [14]](2023.09.14_FunCodec.md); [APCodec [15]](2024.02.16_APCodec.md)) attempt to compress music directly into discrete tokens.
 While discrete representations often yield higher compression densities, they inherently suffer from substantial information loss.
 To reconstruct a more accurate approximation of the original features from discrete tokens, a more robust representation and a stronger decoder are necessary.
 Common codecs like [EnCodec [16]](2022.10.24_EnCodec.md) and Generative Adversarial Networks(GAN)-based methods\cite{gan1,gan2,gan3} exhibit limitations in achieving particularly low bitrates.
 
-In recent years, some research and works have focused on using semantic modeling to represent musical characteristics and utilizing [diffusion [20]](../Diffusion/2020.06.19_DDPM.md) for reconstruction, such as [SemantiCodec [21]](2024.04.30_SemantiCodec.md) and [SEED-TTS [22]](../Speech_LLM/2024.06.04_Seed-TTS.md).
+In recent years, some research and works have focused on using semantic modeling to represent musical characteristics and utilizing [diffusion [20]](../Diffusion/2020.06.19_DDPM.md) for reconstruction, such as [SemantiCodec [21]](2024.04.30_SemantiCodec.md) and [SEED-TTS [22]](../SpeechLM/2024.06.04_Seed-TTS.md).
 However, these models are not specifically designed for music-related tasks.
 Compared to speech tasks, music has a rich background, including instruments like piano and bass, and vocals that should be clearly discernible from the background music.
 Therefore, it is essential to consider both semantic and acoustic information; focusing solely on one aspect would compromise the overall perceptual quality of the reconstructed audio.
 
-To address these challenges, we propose a [flow-matching-based [23]](../Flow/2022.10.06_Flow_Matching.md) music codec ***MuCodec***.
+To address these challenges, we propose a [flow-matching-based [23]](../Diffusion/2022.10.06_Flow_Matching.md) music codec ***MuCodec***.
 ***MuCodec*** uses a specialized feature extractor, ***MuEncoder***, based on the two key aspects of music: vocals and background.
 The ***MuEncoder*** features are then discretized using RVQ and employed as conditions for reconstructing Mel-VAE features via flow-matching.
 We reconstruct the Mel spectrogram by passing the Mel-VAE features through a pre-trained Mel-VAE decoder ([AudioLDM [24]](../Diffusion/2023.08.10_AudioLDM2.md)), and ultimately, the music is reconstructed using [HiFi-GAN [25]](../TTS3_Vocoder/2020.10.12_HiFi-GAN.md).
@@ -140,7 +140,7 @@ We use ViSQOL\cite{hines2015visqol} as an audio quality assessment metric.
 Since the background can interfere with vocal evaluation, we separate the vocals and background of the generated music using a pre-trained separation model\cite{seperate}.
 We then calculate the similarity between the generated vocal part and the original vocal part with a pre-trained speaker similarity model\cite{speaker} and use [Whisper [36]](../SpeechLM/2022.12.06_Whisper.md)-v2 to compute the Word Error Rate (WER) of the generated vocal part as the vocal clarity evaluation metric.
 
-In the ***MuEncoder*** setting, we employ a 13-layer [Conformer [37]](../../Models/_Basis/2020.05.16_Conformer.md) model.
+In the ***MuEncoder*** setting, we employ a 13-layer [Conformer [37]](../ASR/2020.05.16_Conformer.md) model.
 We assign a weight of 1 to the music reconstruction loss and 0.2 to the lyrics recognition loss, which consists of both CTC Loss and RNN-T Loss.
 
 In the RVQ setting, we design two configurations for high- and low-bitrate scenarios.
