--- a/Models/Diffusion/2024.06.26_E2_TTS.md
+++ b/Models/Diffusion/2024.06.26_E2_TTS.md
@@ -42,15 +42,12 @@
   - [Libriheavy](../../Datasets/2023.09.15_Libriheavy.md)
 - 对比:
   - [Voicebox](../Speech_LLM/2023.06.23_VoiceBox.md)
-  - [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md)
+  - [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)
   - [NaturalSpeech 3](../Diffusion/2024.03.05_NaturalSpeech3.md)
 - 复现:
   - 2024.07.10 [lucidrains/e2-tts-pytorch](https://github.com/lucidrains/e2-tts-pytorch)
 
 </details>
-
-## Abstract: 摘要
-
 
 ## Abstract: 摘要
 
@@ -437,23 +434,23 @@ We proposed several variants of ***E2 TTS*** to improve usability during inferen
 [^5]: [NaturalSpeech](../../Models/E2E/2022.05.09_NaturalSpeech.md)
 [^6]: [Neural Voice Cloning with a Few Samples]
 [^7]: [Transfer Learning from Speaker Verification to Multispeaker Text-To-Speech Synthesis]
-[^8]: [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)
-[^9]: [SpeechX](../../Models/Speech_LLM/2023.08.14_SpeechX.md)
-[^10]: [VALL-T](../../Models/Speech_LLM/2024.01.25_VALL-T.md)
-[^11]: [RALL-E](../../Models/Speech_LLM/2024.04.04_RALL-E.md)
-[^12]: [VALL-E 2](../../Models/Speech_LLM/2024.06.08_VALL-E2.md)
-[^13]: [UniAudio](../../Models/Speech_LLM/2023.10.01_UniAudio.md)
+[^8]: [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)
+[^9]: [SpeechX](../SpeechLM/2023.08.14_SpeechX.md)
+[^10]: [VALL-T](../SpeechLM/2024.01.25_VALL-T.md)
+[^11]: [RALL-E](../SpeechLM/2024.04.04_RALL-E.md)
+[^12]: [VALL-E 2](../SpeechLM/2024.06.08_VALL-E_2.md)
+[^13]: [UniAudio](../SpeechLM/2023.10.01_UniAudio.md)
 [^14]: [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)
 [^15]: [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)
 [^16]: [DDPM]
 [^17]: []
 [^18]: [Voicebox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md)
 [^19]: [Matcha-TTS]
-[^20]: [Flow-Matching](2022.10.06_Flow_Matching.md)
+[^20]: [Flow-Matching](../Diffusion/2022.10.06_Flow_Matching.md)
 [^21]: [Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)
 [^22]: [E3 TTS](../../Models/Diffusion/2023.11.02_E3_TTS.md)
 [^23]: [U-Net](../../Models/_Basis/U-Net.md)
-[^24]: [Seed-TTS](../../Models/Speech_LLM/2024.06.04_Seed-TTS.md)
+[^24]: [Seed-TTS](../SpeechLM/2024.06.04_Seed-TTS.md)
 [^25]: [Bytes are All You Need: End-To-End Multilingual Speech Recognition and Synthesis with Bytes]
 [^26]: [Transformer](../../Models/_Transformer/2017.06.12_Transformer.md)
 [^27]: [NeuralODE]
