--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -62,7 +62,7 @@ Consequently, we adopt the [Diffusion Transformer (DiT)](2022.12.19_DiT.md) to T
 We also explore the significance of leveraging aligned text and speech representations, showing that performance can be enhanced by either using a text encoder jointly trained with speech data or a speech autoencoder with an auxiliary language modeling objective alongside the reconstruction objective.
 
 Our comprehensive experiments on English-only and multilingual evaluation demonstrate that our model not only simplifies the training process but also achieves superior or comparable zero-shot performance to state-of-the-art models in terms of naturalness, intelligibility, and speaker similarity.
-The base-sized ***DiTTo*** surpasses a state-of-the-art autoregressive model ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)), offering an inference speed 4.6 times faster and a model size 3.84 times smaller.
+The base-sized ***DiTTo*** surpasses a state-of-the-art autoregressive model ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)), offering an inference speed 4.6 times faster and a model size 3.84 times smaller.
 Additionally, we demonstrate that our model scales effectively with increases in both data and model sizes.
 
 ## 2.Related Works: 相关工作
@@ -70,12 +70,12 @@ Additionally, we demonstrate that our model scales effectively with increases in
 ### Large-scale TTS
 Recently, large-scale TTS research progresses actively in two main directions: LLM-based autoregressive (AR) TTS and non-autoregressive (Non-AR) TTS.
 A prominent feature of LLMs is the scalability [16], [17] and their proficiency in zero-shot learning tasks, demonstrating significant capabilities without prior specific training on those tasks [18], [19], [20], [21].
-Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../Speech_LLM/2023.11.14_Qwen-Audio.md)).
+Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md); [AudioLM](../SpeechLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../SpeechLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../SpeechLM/2023.11.14_Qwen-Audio.md)).
 [VALL-E](../SpeechLM/2023.01.05_VALL-E.md) employs [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) for speech-to-token mapping, posing TTS tasks as AR language modeling tasks, thus enabling zero-shot capabilities in the speech domain.
-[CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md) introduces Mel-VAE to achieve superior token length compression, and enables a language model to predict multiple tokens simultaneously.
+[CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md) introduces Mel-VAE to achieve superior token length compression, and enables a language model to predict multiple tokens simultaneously.
 Although this approach removes the need for cascaded modeling ([VALL-E](../SpeechLM/2023.01.05_VALL-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
 On the other hand, Non-AR generative models are employed to enhance the efficiency of TTS systems.
-[VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) utilizes a flow matching [32] to generate speech, effectively casting the TTS task into a speech infilling task.
+[VoiceBox](../../Models/SpeechLM/2023.06.23_VoiceBox.md) utilizes a flow matching [32] to generate speech, effectively casting the TTS task into a speech infilling task.
 NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
 However, requiring supplementary data beyond speech-transcription pairs hinders scalability.
 [Simple-TTS](../_tmp/Simple-TTS.md) simplifies the data preparation and training process by removing auxiliary modules and the need for phoneme-level durations.
@@ -91,10 +91,10 @@ In the context of TTS, however, applying LDMs to TTS ([NaturalSpeech2](../../Mod
 This is primarily due to the need for precise temporal alignment between text and speech, as well as the higher fidelity requirements inherent in audio data.
 
 ### Neural Audio Codec
-Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)).
+Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md); [VALL-E](../SpeechLM/2023.01.05_VALL-E.md)).
 Recent advancements employ an encoder-decoder architecture coupled with Residual Vector Quantization (RVQ) [41], [42], [43] to transform raw audio waves into discretized tokens.
 For example, [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) converts 24,000 Hz mono waveforms into 75 Hz latents.
-With a similar architecture, by focusing the compression specifically on speech rather than general audio signals, Mel-VAE ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)) achieves approximately 10.76 Hz latents by compressing the mel-spectrogram.
+With a similar architecture, by focusing the compression specifically on speech rather than general audio signals, Mel-VAE ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)) achieves approximately 10.76 Hz latents by compressing the mel-spectrogram.
 This reduction significantly lowers the computational cost of the speech generation module.
 Another research direction of improving neural audio codecs for TTS systems is injecting semantic information using large language models (LLMs) ([SpeechTokenizer](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md)).
 
@@ -167,7 +167,7 @@ $$
 <details>
 <summary>原文</summary>
 
-To enrich the contextual information and facilitate zero-shot audio prompting, we incorporate a random span masking into the model training following ([VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md); [Audiobox](../../Models/Speech_LLM/2023.12.25_Audiobox.md)).
+To enrich the contextual information and facilitate zero-shot audio prompting, we incorporate a random span masking into the model training following ([VoiceBox](../../Models/SpeechLM/2023.06.23_VoiceBox.md); [Audiobox](../SpeechLM/2023.12.25_Audiobox.md)).
 We input $z_{mask}^{(t)} := m\odot z^{(t)} + (1-m)\odot z_{speech}$ to the model, where $\odot$ indicates element-wise multiplication and the binary masking $m$ fully masks with the probability of $0.1$ or partially masks a random contiguous segment whose size is between $70\%$ and $100\%$ of data.
 We also use the binary span masking as an additional input to the model.
 This allows the model to explicitly identify which part needs to be generated.
@@ -176,7 +176,7 @@ The inclusion of masking modifies the training loss to:
 </details>
 <br>
 
-为了丰富上下文信息并促进零样本音频提示, 我们遵循 [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md); [Audiobox](../../Models/Speech_LLM/2023.12.25_Audiobox.md) 的做法, 在模型训练中引入随机跨度掩膜.
+为了丰富上下文信息并促进零样本音频提示, 我们遵循 [VoiceBox](../../Models/SpeechLM/2023.06.23_VoiceBox.md); [Audiobox](../SpeechLM/2023.12.25_Audiobox.md) 的做法, 在模型训练中引入随机跨度掩膜.
 
 我们将 $z_{mask}^{(t)} := m\odot z^{(t)} + (1-m)\odot z_{speech}$ 输入到模型中, 其中 $\odot$ 表示逐元素相乘, 二进制掩膜 $m$ 完全掩盖概率为 $0.1$ 或部分掩盖随机连续片段, 其大小介于数据 $70\%$ 和 $100\%$ 之间.
 我们也使用二进制跨度掩膜作为模型的额外输入.
@@ -254,7 +254,7 @@ $$
 <details>
 <summary>原文</summary>
 
-where $Loss_{NAC}(\psi)$ indicate the loss function which is used when the neural audio codec is pre-trained ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)).
+where $Loss_{NAC}(\psi)$ indicate the loss function which is used when the neural audio codec is pre-trained ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)).
 $\lambda$ controls the contribution of $Loss_{LM}$, with $\lambda = 0$ indicating the pre-training phase.
 When $\lambda 0$, a pre-trained language decoder performs causal language modeling on text token sequences $x$, based on the speech latent vector $z_{speech}$.
 While the parameters of language model decoder are fixed, gradients are backpropagated to adjust the linear mappings $f(z_{speech})$.
@@ -330,7 +330,7 @@ The model is trained separate from the diffusion model, using the cross-entropy 
 We conduct a comprehensive model architecture search to identify the most suitable diffusion-based model for TTS, resulting in the adoption of the Diffusion Transformer (DiT) [10] model (see Section 6.1).
 We adopt the DiT model in TTS while incorporating recent architectural advancements
 for transformer variants, such as the gated linear unit with GELU activation [50], rotary position embeddings [51], and cross-attention with global adaptive layer normalization (AdaLN) [52].
-For the latent space, we employ Mel-VAE introduced in ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)) which is able to compress audio sequences approximately seven times more than [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md), yet maintaining superior quality.
+For the latent space, we employ Mel-VAE introduced in ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)) which is able to compress audio sequences approximately seven times more than [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md), yet maintaining superior quality.
 Due to space limitations, additional details regarding model configurations are provided in Appendix 8.4.
 We also detail down our noise scheduler and CFG in Appendix 8.6.
 
@@ -339,7 +339,7 @@ We also detail down our noise scheduler and CFG in Appendix 8.6.
 
 我们构造一个全面的模型架构搜索, 以确定适合 TTS 的扩散模型, 并采用扩散 Transformer (DiT) [10] 模型 (参见第 6.1 节).
 我们在 TTS 中采用 DiT 模型, 并融入了最近的 Transformer 变体的架构进步, 如门控线性单元 (GELU) 激活的门控线性单元 [50], 旋转位置嵌入 [51], 以及交叉注意力与全局自适应层归一化 (AdaLN) [52].
-对于隐空间, 我们采用 Mel-VAE ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)) 作为替代品, 它能够在音频序列的近似压缩率上比 [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) 提高了 7 倍, 同时保持优秀的质量.
+对于隐空间, 我们采用 Mel-VAE ([CLaM-TTS](../../Models/SpeechLM/2024.04.03_CLaM-TTS.md)) 作为替代品, 它能够在音频序列的近似压缩率上比 [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) 提高了 7 倍, 同时保持优秀的质量.
 由于篇幅限制, 我们在附录 8.4 中提供了模型配置的详细信息.
 我们还在附录 8.6 中详细介绍了噪声调度和 CFG.
 
