--- a/Models/Diffusion/2024.04.23_FlashSpeech.md
+++ b/Models/Diffusion/2024.04.23_FlashSpeech.md
@@ -76,8 +76,8 @@ When using a Non-AutoRegressive (NAR) [Latent Diffusion Model](2021.12.20_LDM.md
 As a result, although these methods can produce human-like speech, they require significant computational time and cost.
 >
 Some efforts have been made to accelerate the generation process.
-[Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) adopts [Flow-Matching (2022)](../Flow/2022.10.06_Flow_Matching.md) so that fewer sampling steps (Number of function evaluations (NFE): 64) can be achieved because of the optimal transport path.
-[CLaM-TTS (2024)](../Speech_LLM/2024.04.03_CLaM-TTS.md) proposes a mel-codec with a superior compression rate and a latent language model that generates a stack of tokens at once.
+[Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md) adopts [Flow-Matching (2022)](2022.10.06_Flow_Matching.md) so that fewer sampling steps (Number of function evaluations (NFE): 64) can be achieved because of the optimal transport path.
+[CLaM-TTS (2024)](../SpeechLM/2024.04.03_CLaM-TTS.md) proposes a mel-codec with a superior compression rate and a latent language model that generates a stack of tokens at once.
 Although the slow generation speed issue has been somewhat alleviated, the inference speed is still far from satisfactory for practical applications.
 Moreover, the substantial computational time of these approaches leads to significant computational cost overheads, presenting another challenge.
 
@@ -95,8 +95,8 @@ Moreover, the substantial computational time of these approaches leads to signif
 因此, 尽管这些方法能够生成类似于人类的语音, 但它们需要大量的计算时间和成本.
 
 已经有一些工作尝试加速生成过程.
-- [Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) 采用[流匹配 (Flow Matching, FM)](../Flow/2022.10.06_Flow_Matching.md), 由于最优传输路径可以实现较少的采样步骤.
-- [CLaM-TTS (2024)](../Speech_LLM/2024.04.03_CLaM-TTS.md) 提出了一种更优压缩率的 mel-codec, 以及一个潜在语言模型, 一次生成一系列 token.
+- [Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md) 采用[流匹配 (Flow Matching, FM)](2022.10.06_Flow_Matching.md), 由于最优传输路径可以实现较少的采样步骤.
+- [CLaM-TTS (2024)](../SpeechLM/2024.04.03_CLaM-TTS.md) 提出了一种更优压缩率的 mel-codec, 以及一个潜在语言模型, 一次生成一系列 token.
 尽管慢速生成速度问题有所缓解, 但对于实际应用来说, 推理速度仍然不足.
 此外, 这些方法的大量计算时间导致了额外的计算开销, 这又是一个挑战.
 
@@ -156,8 +156,8 @@ Remarkably, it achieves this at a speed approximately 20 times faster than compa
 Motivated by the success of the large language model, the speech research community has recently shown increasing interest in scaling the sizes of model and training data to bolster generalization capabilities, producing natural speech with diverse speaker identities and prosody under zero-shot settings.
 The pioneering work is [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md), which adopts the [EnCodec (2022)](../Speech_Neural_Codec/2022.10.24_EnCodec.md) to discretize the audio waveform into tokens.
 Therefore, a language model can be trained via in-context learning that can generate the target utterance where the style is consistent with prompt utterance.
-However, generating audio in such an autoregressive manner ([LM-VC (2023)](); [VoiceCraft (2024)](../Speech_LLM/2024.03.25_VoiceCraft.md)) can lead to unstable prosody, word skipping, and repeating issues ([FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); Tan et al.(2021); [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md))
-To ensure the robustness of the system, non-autoregressive methods such as [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md) and [Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) utilize diffusion-style model (VP-diffusion Song et al.(2020) or [Flow-Matching (2022)](../Flow/2022.10.06_Flow_Matching.md)) to learn the distribution of a continuous intermediate vector such as mel-spectrogram or latent vector of codec.
+However, generating audio in such an autoregressive manner ([LM-VC (2023)](); [VoiceCraft (2024)](../SpeechLM/2024.03.25_VoiceCraft.md) can lead to unstable prosody, word skipping, and repeating issues ([FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); Tan et al.(2021); [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md))
+To ensure the robustness of the system, non-autoregressive methods such as [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md) and [Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md) utilize diffusion-style model (VP-diffusion Song et al.(2020) or [Flow-Matching (2022)](2022.10.06_Flow_Matching.md)) to learn the distribution of a continuous intermediate vector such as mel-spectrogram or latent vector of codec.
 Both LM-based methods Zhao et al.(2023) and diffusion-based methods show superior performance in speech generation tasks.
 However, their generation is slow due to the iterative computation.
 Considering that many speech generation scenarios require real-time inference and low computational costs, we employ the latent consistency model for large-scale speech generation that inference with one or two steps while maintaining high audio quality.
@@ -313,11 +313,11 @@ Our training procedure is outlined in Fig.03, which has three parts:
 
 Previous regression methods for prosody prediction ([FastSpeech2](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md)), due to their deterministic mappings and assumptions of unimodal distribution, often fail to capture the inherent diversity and expressiveness of human speech prosody.
 This leads to predictions that lack variation and can appear over-smoothed.
-On the other hand, diffusion methods ([Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md); Li et al.(2023)) for prosody prediction offer a promising alternative by providing greater prosody diversity.
+On the other hand, diffusion methods ([Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md); Li et al.(2023)) for prosody prediction offer a promising alternative by providing greater prosody diversity.
 However, they come with challenges regarding stability, and the potential for unnatural prosody.
 Additionally, the iterative inference process in DMs requires a significant number of sampling steps that may also hinder real-time appli
 cation.
-Meanwhile, LM-based methods ([Mega-TTS2](../Speech_LLM/2023.07.14_Mega-TTS2.md); [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)) also need a long time for inference.
+Meanwhile, LM-based methods ([Mega-TTS2](../SpeechLM/2023.07.14_Mega-TTS2.md); [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md)) also need a long time for inference.
 To alleviate these issues, our prosody generator consists of a prosody regression module and a prosody refinement module to enhance the diversity of prosody regression results with efficient one-step consistency model sampling.
 
 #### 3.4.2.Prosody Refinement via Consistency Model
@@ -329,7 +329,7 @@ We adopt a consistency model as a prosody refinement module.
 The conditional feature of the consistency model is the feature from prosody regression before the final projection layer.
 Thus, the residual from a stochastic sampler refines the output of a deterministic prosody regression and produces a diverse set of plausible prosody under the same transcription and audio prompt.
 One option for the final prosody output p final can be represented as: p final= pres+ p init,(18) where p final denotes the final prosody output, p res represents the residual output from the prosody refinement module, capturing the variations between the ground truth prosody and the deterministic prediction, p init is the initial deterministic prosody prediction from the prosody regression module.
-However, this formulation may negatively affect prosody stability, a similar observation is found in ([Audiobox](); [Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md)).
+However, this formulation may negatively affect prosody stability, a similar observation is found in ([Audiobox](); [Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md)).
 More specifically, higher diversity may cause less stability and sometimes produce unnatural prosody.
 To address this, we introduce a control factor  $\alpha$  that finely tunes the balance between stability and diversity in the prosodic output: p final=  $\alpha$  p res+ p init(19) where  $\alpha$  is a scalar value ranging between 0 and 1.
 This adjustment allows for controlled incorporation of variability into the prosody, mitigating issues related to stability while still benefiting from the diversity offered by the prosody refinement module.
@@ -421,7 +421,7 @@ We use both objective and subjective evaluation metrics, including
 This metric is crucial for evaluating the efficiency of our system, particularly for applications requiring real-time processing.
 We measure the time of our system end-to-end on an NVIDIA V100 GPU following [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md).
 - Sim-O and Sim-R: These metrics assess the speaker similarity.
-Sim-R measures the objective similarity between the synthesized speech and the reconstruction reference speech through the audio codec, using features embedding extracted from the pre-trained speaker verification model [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md); [ClaM-TTS (2024)](../Speech_LLM/2024.04.03_CLaM-TTS.md).
+Sim-R measures the objective similarity between the synthesized speech and the reconstruction reference speech through the audio codec, using features embedding extracted from the pre-trained speaker verification model [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md); [ClaM-TTS (2024)](../SpeechLM/2024.04.03_CLaM-TTS.md).
 Sim-O is calculated with the original reference speech.
 Higher scores in Sim-O and Sim-R indicate a higher speaker similarity.
 - WER (Word Error Rate): To evaluate the accuracy and clarity of synthesized speech from the TTS system, we employ the Automatic Speech Recognition (ASR) model Wang et al.
@@ -446,20 +446,20 @@ The results are summarized in table 1 and figure 5.
 #### 4.3.1.Evaluation Baselines
 
 - [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md): [VALL-E (2023)](../SpeechLM/2023.01.05_VALL-E.md) predicts codec tokens using both AR and NAR models.
-RTF is obtained from [ClaM-TTS (2024)](../Speech_LLM/2024.04.03_CLaM-TTS.md); [Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md).
+RTF is obtained from [ClaM-TTS (2024)](../SpeechLM/2024.04.03_CLaM-TTS.md); [Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md).
 We use our reproduced results for MOS, Sim, and WER.
 Additionally, we do a preference test with their official demo.
-- [Voicebox (2023)](../../Models/Speech_LLM/2023.06.23_VoiceBox.md): Voicebox uses flow-matching to predict maksed mel-spectrogram.
+- [Voicebox (2023)](../../Models/SpeechLM/2023.06.23_VoiceBox.md): Voicebox uses flow-matching to predict maksed mel-spectrogram.
 RTF is from the original paper.
 We use our reproduced results for MOS, Sim, and WER.
 We also implement a preference test with their official demo.
 - [NaturalSpeech2 (2023)](2023.04.18_NaturalSpeech2.md): NaturalSpeech2 uses a latent diffusion model to predict latent features of codec.
 The RTF is from the original paper. the Sim, WER and samples for MOS are obtained through communication with the authors.
 We also do a preference test with their official demo.
-- [Mega-TTS (2023)](../Speech_LLM/2023.06.06_Mega-TTS.md) 8: Mega-TTS uses both language model and GAN to predict mel-spectrogram.
+- [Mega-TTS (2023)](../SpeechLM/2023.06.06_Mega-TTS.md) 8: Mega-TTS uses both language model and GAN to predict mel-spectrogram.
 We obtain RTF from mobilespeech Ji et al.(2024) and WER from the original paper.
 We do a preference test with their official demo.
-- [ClaM-TTS (2024)](../Speech_LLM/2024.04.03_CLaM-TTS.md): ClaM-TTS uses the AR model to predict mel codec tokens.
+- [ClaM-TTS (2024)](../SpeechLM/2024.04.03_CLaM-TTS.md): ClaM-TTS uses the AR model to predict mel codec tokens.
 We obtain the objective evaluation results from the original paper and do a preference test with their official demo.
 
 #### 4.3.2.Generation Quality
