--- a/Modules/VQ/2017.11.02_VQ-VAE.md
+++ b/Modules/VQ/2017.11.02_VQ-VAE.md
@@ -4,21 +4,42 @@
 <summary>基本信息</summary>
 
 - 标题: "Neural Discrete Representation Learning"
-- 作者: 
+- 作者:
   - 01 Aaron van den Oord
   - 02 Oriol Vinyals
   - 03 Koray_Kavukcuoglu
-- 链接: 
+- 链接:
   - [ArXiv](https://arxiv.org/abs/1711.00937)
   - [Publication](https://proceedings.neurips.cc/paper/2017/hash/7a98af17e63a0ac09ce2e96d03992fbc-Abstract.html)
   - [Github](https://github.com/deepmind/sonnet/blob/v2/sonnet/src/nets/vqvae.py)
-  - [Demo]()
-- 文件: 
-  - [ArXiv] #TODO
+  - [Demo]
+- 文件:
+  - [ArXiv](_PDF/1711.00937v2__VQ-VAE__Neural_Discrete_Representation_Learning.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
 
-Learning useful representations without supervision remains a key challenge in machine learning. In this paper, we propose a simple yet powerful generative model that learns such discrete representations. Our model, the Vector Quantised-Variational AutoEncoder (VQ-VAE), differs from VAEs in two key ways: the encoder network outputs discrete, rather than continuous, codes; and the prior is learnt rather than static. In order to learn a discrete latent representation, we incorporate ideas from vector quantisation (VQ). Using the VQ method allows the model to circumvent issues of "posterior collapse" -- where the latents are ignored when they are paired with a powerful autoregressive decoder -- typically observed in the VAE framework. Pairing these representations with an autoregressive prior, the model can generate high quality images, videos, and speech as well as doing high quality speaker conversion and unsupervised learning of phonemes, providing further evidence of the utility of the learnt representations.
+<details>
+<summary>展开原文</summary>
+
+Learning useful representations without supervision remains a key challenge in machine learning.
+In this paper, we propose a simple yet powerful generative model that learns such discrete representations.
+Our model, the ***Vector Quantized-Variational AutoEncoder (VQ-VAE)***, differs from VAEs in two key ways: the encoder network outputs discrete, rather than continuous, codes; and the prior is learnt rather than static.
+In order to learn a discrete latent representation, we incorporate ideas from vector quantization (VQ).
+Using the VQ method allows the model to circumvent issues of "posterior collapse" -- where the latents are ignored when they are paired with a powerful autoregressive decoder -- typically observed in the VAE framework.
+Pairing these representations with an autoregressive prior, the model can generate high quality images, videos, and speech as well as doing high quality speaker conversion and unsupervised learning of phonemes, providing further evidence of the utility of the learnt representations.
+
+</details>
+<br>
+
+在无监督情况下学习有用的表示是一个机器学习的关键挑战.
+
+在本文中, 我们提出了一个简单但强大的生成模型, 它可以学习有用的离散表示.
+我们的模型, 称为***向量量化变分自编码器 (Vector Quantized-Variational AutoEncoder, VQ-VAE)***, 与 VAE 有两个关键区别: 编码器网络输出的是离散的, 而不是连续的编码; 并且先验是学习的而不是静态的.
+
+为了学习离散的潜在表示, 我们融入了向量量化 (VQ) 的一些思想.
+使用 VQ 方法可以克服"后验崩溃"的问题, 即变分自编码器框架与强大的自回归解码器配对时出现的忽略了潜在变量的问题.
+
+将这些表示与自回归先验配合, 模型可以生成高质量的图像, 视频和语音, 还可以进行高质量的说话者转换和无监督学习音素, 提供了学习到的表示的实用性的更多证据.
