--- a/Evaluations/2022.04.05_UTMOS.md
+++ b/Evaluations/2022.04.05_UTMOS.md
@@ -5,12 +5,12 @@
 
 - 标题: "UTMOS: UTokyo-SaruLab System for VoiceMOS Challenge 2022"
 - 作者:
-  - 01 Takaaki Saeki,
-  - 02 Detai Xin,
-  - 03 Wataru Nakata,
-  - 04 Tomoki Koriyama,
-  - 05 Shinnosuke Takamichi,
-  - 06 Hiroshi Saruwatari
+  - 01 Takaaki Saeki (The University of Tokyo) takaaki_saeki@ipc.i.u-tokyo.ac.jp
+  - 02 Detai Xin (The University of Tokyo) detai_xin@ipc.i.u-tokyo.ac.jp
+  - 03 Wataru Nakata (The University of Tokyo) nakata-wataru855@general.ecc.u-tokyo.ac.jp
+  - 04 Tomoki Koriyama (The University of Tokyo)
+  - 05 Shinnosuke Takamichi (The University of Tokyo)
+  - 06 Hiroshi Saruwatari (The University of Tokyo)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2204.02152)
   - [Publication](https://doi.org/10.21437/Interspeech.2022-439)
@@ -47,6 +47,24 @@ In addition, we conducted ablation studies to investigate the effectiveness of o
 此外, 我们还进行了消融实验来评估我们提出的方法的有效性.
 
 ## 1.Introduction: 引言
+
+Although subjective evaluation has been the gold standard in the field of speech synthesis~\cite{black05blizzard}, its high cost in terms of time and money motivates us to develop measures for automatically determining the performance.
+Although a number of neural network-based approaches for doing this have been proposed~\cite{patton16automos,lo2019mosnet,Leng2021MBNETMP}, there are still many challenges, such as developing a general-purpose prediction model.
+
+The VoiceMOS Challenge~\cite{huang21voicemos}, which was launched this year, provides the common database and baseline systems.
+The database contains synthetic speech samples and the corresponding mean opinion scores (MOS) on a five-point scale as assigned by human evaluators.
+The participants construct a prediction system and submit the system's predicted MOS for the test data.
+There are two tracks in the challenge, the main and out-of-domain (OOD) tracks, and the system performance is evaluated using several metrics.
+
+In this paper, we present our MOS prediction system, ***UTMOS*** (pronounced "u--t--mos"), which we submitted to VoiceMOS Challenge 2022.
+Our system is based on ensemble learning of strong and weak learners: the strong learners are obtained by fine-tuning models of self-supervised learning (SSL) models, and the weak learners predict scores from SSL features by using non-neural-network machine-learning methods from SSL features.
+The strong learner incorporates several improvement functions, including contrastive learning, listener dependency, and phoneme encoding.
+We also present the results of VoiceMOS Challenge 2022 and those of our ablation studies.
+Our implementation is publicly available at [Github](https://github.com/sarulab-speech/UTMOS22).
+This paper makes three contributions in particular:
+- It describes and MOS prediction system that had the highest score on several metrics in the main and OOD tracks of VoiceMOS Challenge 2022.
+- It presents proposed methods for predicting MOS that include contrastive learning and phoneme encoding.
+- It presents the results of ablation studies demonstrating the effectiveness of listener-dependent learning and that of stacking by increasing the number of strong learners.
 
 ## 2.Related Works: 相关工作
 
