--- a/Models/SpeechLM/2022.03.30_dGSLM.md
+++ b/Models/SpeechLM/2022.03.30_dGSLM.md
@@ -43,14 +43,14 @@ We show that our model is able to generate speech, laughter and other paralingui
 它使用了近期在无监督口语单元发现的工作, 耦合了具有交叉注意力的双塔 Transformer 架构, 在 2000 小时的双通道原始对话音频 (Fisher 数据集) 上进行训练, 无需任何文本或标签.
 我们展示了我们的模型能够同时生成两个通道的语音, 笑声和其他副语言信号, 并比基于文本的级联模型产生更自然和流畅的轮流对话.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
