--- a/Models/SpeechLM/2021.09.07_pGSLM.md
+++ b/Models/SpeechLM/2021.09.07_pGSLM.md
@@ -55,14 +55,14 @@ Codes and models are available at https://github.com/pytorch/fairseq/tree/main/e
 音频样本可在 https://speechbot.github.io/pgslm 找到.
 代码和模型可在 https://github.com/pytorch/fairseq/tree/main/examples/textless_nlp/pgslm 找到.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
