--- a/Models/SpeechLM/2021.10.20_SLAM.md
+++ b/Models/SpeechLM/2021.10.20_SLAM.md
@@ -52,14 +52,14 @@ Through extensive empirical analysis we also demonstrate the importance of the c
 在四个 GLUE 任务和文本规范化任务中, 我们观察到容量限制和两种模态之间的干扰, 导致性能比同等仅文本模型有所下降, 但仍然与 BERT 相当.
 通过广泛的经验分析, 我们还展示了语音预训练的目标函数的选择的重要性, 以及添加额外监督信号对学习表示质量的有益影响.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
