--- a/Models/SpeechLM/2022.03.31_SpeechPrompt.md
+++ b/Models/SpeechLM/2022.03.31_SpeechPrompt.md
@@ -34,14 +34,14 @@ We further study the technique in challenging sequence generation tasks.
 Prompt tuning also demonstrates its potential, while the limitation and possible research directions are discussed in this paper.
 The source code is available on [this https URL](https://github.com/ga642381/SpeechPrompt).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
