--- a/Models/SpeechLM/2023.02.07_SPEAR-TTS.md
+++ b/Models/SpeechLM/2023.02.07_SPEAR-TTS.md
@@ -48,14 +48,14 @@ Our experiments demonstrate that ***SPEAR-TTS*** achieves a character error rate
 为了控制说话人身份, 我们采用了示例提示, 这使得 ***SPEAR-TTS*** 能够仅使用 3 秒的短样本泛化到未见过的说话人, 而无需任何显式的说话人表示或说话人 ID 标签.
 我们的实验表明 ***SPEAR-TTS*** 在使用仅 15 分钟的平行数据时, 字符错误率与最先进的方法相当, 同时在主观测试中, 其自然度和声学质量与真实语音相当.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
