--- a/Models/SpeechLM/2022.09.30_AudioGen.md
+++ b/Models/SpeechLM/2022.09.30_AudioGen.md
@@ -60,14 +60,14 @@ Samples: [this https URL](https://felixkreuk.github.io/audiogen)
 
 为了缓解上述挑战, 我们提出了一种增强技术, 混合不同的音频样本,
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
