--- a/Models/SpeechLM/2022.12.06_Whisper.md
+++ b/Models/SpeechLM/2022.12.06_Whisper.md
@@ -40,14 +40,14 @@ We are releasing models and inference code to serve as a foundation for further 
 与人类相比, 模型的准确性和鲁棒性都有所提高.
 我们正在发布模型和推理代码, 以作为未来工作的基础.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
