--- a/Models/SpeechLM/2023.01.26_MusicLM.md
+++ b/Models/SpeechLM/2023.01.26_MusicLM.md
@@ -50,14 +50,14 @@ To support future research, we publicly release ***MusicCaps***, a dataset compo
 此外, 我们展示了 ***MusicLM*** 可以以文本和旋律为条件, 它可以根据文本说明所描述的风格来转换口哨和哼唱的旋律.
 为了支持未来的研究, 我们公开发布了 ***MusicCaps***, 一个由 5.5k 条音乐-文本对组成的数据集, 其中包含丰富的文本描述, 这些描述由人工专家提供.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
