--- a/Models/SpeechLM/2023.03.01_SpeechPrompt_v2.md
+++ b/Models/SpeechLM/2023.03.01_SpeechPrompt_v2.md
@@ -33,14 +33,14 @@ However, whether **SpeechPrompt** is capable of serving a large number of tasks 
 In this work, we propose ***SpeechPrompt v2***, a prompt tuning framework capable of performing a wide variety of speech classification tasks, covering multiple languages and prosody-related tasks.
 The experiment result shows that ***SpeechPrompt v2*** achieves performance on par with prior works with less than 0.15M trainable parameters in a unified framework.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
