--- a/Models/SpeechLM/2023.05.19_Pengi.md
+++ b/Models/SpeechLM/2023.05.19_Pengi.md
@@ -34,14 +34,14 @@ The unified architecture of ***Pengi*** enables open-ended tasks and close-ended
 When evaluated on 22 downstream tasks, our approach yields state-of-the-art performance in several of them.
 Our results show that connecting language models with audio models is a major step towards general-purpose audio understanding.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
