--- a/Models/SpeechLM/2023.05.18_SpeechGPT.md
+++ b/Models/SpeechLM/2023.05.18_SpeechGPT.md
@@ -33,14 +33,14 @@ Additionally, we employ a three-stage training strategy that includes modality-a
 The experimental results demonstrate that ***SpeechGPT*** has an impressive capacity to follow multi-modal human instructions and highlight the potential of handling multiple modalities with one model.
 Demos are shown in [this https URL](https://0nutation.github.io/SpeechGPT.github.io/).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
